# xbld

./: .gitignore  .vimspector.json  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  main.rs  obj.rs  patch.rs  reloc.rs  xbe.rs
src/xbe/: mod.rs  raw.rs
test/: conf.toml
