[package]
name = "bfbb_linker"
version = "0.1.0"
authors = ["Steven Casper <sebastiancasper3@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
xbe = { git = "https://github.com/BfBBModdingTools/xbe", branch = "main" }
const_format = "0.2.21"
anyhow = "1.0.44"
thiserror = "1.0.29"
goblin = "0.4.0"
bitflags="1.2.1"
byteorder = "1"
itertools = "0.10.0"
serde = {version = "1.0", features=["derive"]}
toml = "0.5"

[dev-dependencies]
sha-1="0.9.4"
