[package]
name = "bfbb_linker"
version = "0.1.0"
authors = ["Steven Casper <sebastiancasper3@gmail.com>"]
edition = "2021"

[dependencies]
# CLI
clap = "2.33.3"
const_format = "0.2.21"

# Logging
log = "0.4.0"
env_logger = "0.9.0"

# Errors
anyhow = "1.0.44"
thiserror = "1.0.29"

# Binary Parsing/Modification
xbe = { git = "https://github.com/BfBBModdingTools/xbe", branch = "main" }
goblin = "0.4.0"
bitflags="1.2.1"
byteorder = "1"
itertools = "0.10.0"

# Mod Configuration
toml = "0.5"
serde = {version = "1.0", features=["derive"]}

[dev-dependencies]
sha-1="0.9.4"
