[package]
name = "xbld"
version = "0.1.0"
authors = ["Steven Casper <sebastiancasper3@gmail.com>"]
edition = "2021"
description = "A linker for patching and injecting custom code into an XBE binary."

[dependencies]
# Binary Parsing/Modification
xbe = { git = "https://github.com/BfBBModdingTools/xbe", branch = "main" }
goblin = "0.5"
byteorder = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.9"

# Mod Configuration
toml = "0.5"
serde = { version = "1", features = ["derive"] }

anyhow = "1"
itertools = "0.10"
thiserror = "1"
yoke = { version = "0.6.2", features = ["derive"] }

[dev-dependencies]
sha-1="0.10"
